--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-konva": "^18.2.10",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.25.1",
